--- a/www/views/friendTmpl.html
+++ b/www/views/friendTmpl.html
@@ -39,39 +39,39 @@
 <section ng-hide='prHidden'>
   <ul class="list">
     <li class="item">
-    <h2>Back Squat - {{currentUser.prs[0].backsquat}}lb </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Back Squat - {{friend.prs[0].backsquat}}lb </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Front Squat - {{currentUser.prs[0].frontsquat}}lb</h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Front Squat - {{friend.prs[0].frontsquat}}lb</h2>
+      {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Clean & Jerk - {{currentUser.prs[0].cleanandjerk}}lb</h2>
-     {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Clean & Jerk - {{friend.prs[0].cleanandjerk}}lb</h2>
+     {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Snatch - {{currentUser.prs[0].snatch}}lb </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Snatch - {{friend.prs[0].snatch}}lb </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Max Pullups - {{currentUser.prs[0].pullups}} reps </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Max Pullups - {{friend.prs[0].pullups}} reps </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Split Jerk - {{currentUser.prs[0].splitjerk}}lb </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Split Jerk - {{friend.prs[0].splitjerk}}lb </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     <li class="item">
-    <h2>Over Head Squat - {{currentUser.prs[0].overheadsquat}}lb </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Over Head Squat - {{friend.prs[0].overheadsquat}}lb </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Power Clean - {{currentUser.prs[0].powerclean}}lb </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Power Clean - {{friend.prs[0].powerclean}}lb </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     </li>
     <li class="item">
-    <h2>Power Snatch - {{currentUser.prs[0].powersnatch}}lb </h2>
-    {{currentUser.date | date: 'MMM /d /y'}}
+    <h2>Power Snatch - {{friend.prs[0].powersnatch}}lb </h2>
+    {{friend.date | date: 'MMM /d /y'}}
     </li>
   </li>
   </ul>
@@ -79,9 +79,9 @@
 
 </section>
 
-<ion-list ng-hide='followers' show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
+<ion-list  ng-hide="followers" ng-repeat="user in Users | filter:search |orderBy:'_id' as filtered_result track by $index"  show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
 
-  <ion-item  ng-repeat="user in Users | filter:search |orderBy:'_id' as filtered_result track by user._id"  class="item item-avatar item-thumbnail-left" >
+  <ion-item ng-click="goFriend($index)" class="item item-avatar item-thumbnail-left" >
 
 <img src="./img/lindsay.png">
 <h1 class="title">{{user.username}}</h1>
