--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -5,7 +5,9 @@
   </section>
 
 <ion-content class="space" >
-
+  <div class="all-wods-header">
+    <h1 class="">Wods</h1>
+  </div>
 
   <ion-list  show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
 
