--- a/www/views/addWod.html
+++ b/www/views/addWod.html
@@ -15,7 +15,7 @@
   </label>
   <label class="item item-input item-floating-label">
     <span style="color: red" class="input-label">Wod Description</span>
-    <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder=<span>"Description*"</span>></textarea>
+    <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Description*"</textarea>
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">RX</span>
@@ -29,9 +29,11 @@
     <span class="input-label">Tips</span>
     <textarea ng-model="wod.tips" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Tips"></textarea>
   </label>
+<br>
+  <footer class="footer">
+    <button ui-sref="wod" class="bar bar-footer bar-balanced" ng-click="addWod(wod); showAlert(); closeModal()">
+      ADD WOD
+    </button>
+  </footer>
 </div>
-<footer class="footer">
-  <button ui-sref="wod" class="bar bar-footer bar-balanced" ng-click="addWod(wod); showAlert(); closeModal()">
-    ADD WOD
-  </button>
-</footer>
+</ion-content >
