--- a/www/views/navBar.html
+++ b/www/views/navBar.html
@@ -20,7 +20,7 @@
         </div>
 
       </li>
-      <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="wod"><h1>WOD</h1></a></li>
+      <li id="wodColor" ng-click="togNav(); changeColor(wodColor)" ng-hide="goNav"><a ui-sref="wod"><h1>Wod</h1></a></li>
       <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="home"><h1>Home</h1></a></li>
       <li ng-click="togNav()" ng-hide="goNav"> <a ui-sref="user"><h1>Profile</h1></a></li>
 
