--- a/www/views/editModal.html
+++ b/www/views/editModal.html
@@ -9,7 +9,7 @@
   </div>
 
   <br>
-  <h1>{{wod.name}} - {{wod.date | date: 'MMM /d /y'}}</h1>
+  <!-- <h1>{{wod.name}} - {{wod.date | date: 'MMM /d /y'}}</h1> -->
   <div class="list">
     <label class="item item-input item-stacked-label">
       <span class="input-label">Wod Name</span>
