--- a/www/views/friendTmpl.html
+++ b/www/views/friendTmpl.html
@@ -42,38 +42,38 @@
   <ul class="list">
     <li class="item">
     <h2>Back Squat - {{friend.prs[0].backsquat}}lb </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Front Squat - {{friend.prs[0].frontsquat}}lb</h2>
-      {{friend.date | date: 'MMM /d /y'}}
+      <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Clean & Jerk - {{friend.prs[0].cleanandjerk}}lb</h2>
-     {{friend.date | date: 'MMM /d /y'}}
+     <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Snatch - {{friend.prs[0].snatch}}lb </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Max Pullups - {{friend.prs[0].pullups}} reps </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Split Jerk - {{friend.prs[0].splitjerk}}lb </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     <li class="item">
     <h2>Over Head Squat - {{friend.prs[0].overheadsquat}}lb </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Power Clean - {{friend.prs[0].powerclean}}lb </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
     <li class="item">
     <h2>Power Snatch - {{friend.prs[0].powersnatch}}lb </h2>
-    {{friend.date | date: 'MMM /d /y'}}
+    <!-- {{friend.date | date: 'MMM /d /y'}} -->
     </li>
   </li>
   </ul>
