--- a/www/views/userTmpl.html
+++ b/www/views/userTmpl.html
@@ -69,38 +69,38 @@
       <li class="item">
 
       <h2>Back Squat - {{currentUser.prs[0].backsquat}}lb </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Front Squat - {{currentUser.prs[0].frontsquat}}lb</h2>
-        {{currentUser.date | date: 'MMM /d /y'}}
+        <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Clean & Jerk - {{currentUser.prs[0].cleanandjerk}}lb</h2>
-       {{currentUser.date | date: 'MMM /d /y'}}
+       <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Snatch - {{currentUser.prs[0].snatch}}lb </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Max Pullups - {{currentUser.prs[0].pullups}} reps </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Split Jerk - {{currentUser.prs[0].splitjerk}}lb </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       <li class="item">
       <h2>Over Head Squat - {{currentUser.prs[0].overheadsquat}}lb </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Power Clean - {{currentUser.prs[0].powerclean}}lb </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <h2>Power Snatch - {{currentUser.prs[0].powersnatch}}lb </h2>
-      {{currentUser.date | date: 'MMM /d /y'}}
+      <!-- {{currentUser.date | date: 'MMM /d /y'}} -->
       </li>
       <li class="item">
       <a class="ion-ios-plus-outline"> &nbsp Add PR</a>
