--- a/www/views/wodModal.html
+++ b/www/views/wodModal.html
@@ -1,8 +1,8 @@
+
 <section >
   <nav-bar>
     <nav-bar>
-</section>
-
+</section
 <ion-content ng-model='admin'>
 
   <ion-modal-view class="space">
