--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -1,4 +1,6 @@
 
+
+
   <section ng-click='closeWodModal(); closeModal()'>
     <div class="navi" id="navi">
 
@@ -28,7 +30,7 @@
     </div>
   </section>
 
-<ion-content class="space" >
+<!-- <ion-content class="space" > -->
 
   <ion-list  show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
 
@@ -51,7 +53,7 @@
     </ion-item>
 
   </ion-list>
-</ion-content>
+<!-- </ion-content> -->
 
 
 <section ng-if='admin' ng-click="showFooter()">
