--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -31,8 +31,8 @@
   </div>
 </section>
 
-  <ion-content  ng-model='admin' class="space">
-  <!-- <h2 class="title">Home</h2> -->
+  <!-- <ion-content  ng-model='admin' class="space"> -->
+  <h2 class="title">Home</h2>
   <label class="item item-input">
   <i class="icon ion-search placeholder-icon"></i>
   <input type="search" placeholder="search user" ng-model="search.name">
@@ -111,14 +111,7 @@ More
 </div>
 
 
-
-</ion-content>
-
-
-
-
-
-<!-- <div class="list card">
+<div class="list card">
 
   <div class="item item-avatar">
     <img src="mcfly.jpg">
@@ -140,4 +133,6 @@ More
     </p>
   </div>
 
-</div> -->
+</div>
+
+<!-- </ion-content> -->
